Contact page title update

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 		</header>
 		 
 		   <div class="contact">
-          <h1>Contact</h1>
+          <h1>Contact John Tsapos</h1>
               <p>
 			    Tel <a href="tel:+561234567">+56 1234567</a><br>
                 Skype <a href="skype:hello.JonT"> hello.JonT</a><br><br>
