About page title updated

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 		</header>
 		<main>
 		<div class="skills">
-		    <h1 class="About">About Me!</h1>
+		    <h1 class="About">About John Tsapos</h1>
 		      <table>
 		       	<thead>
 				  <tr>
