changed reference to styles.css in <head>

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -18,7 +18,7 @@
         <header class="page-header">
         	<a href="index.html">
                 <!-- Add Logo here -->
-			  <img src="img/web_developer10.png" alt="logo" class="page-header__item">
+			  <img src="img/web_developer10.png" alt="logo" class="page-header__logo page-header__item">
 
 			<nav class="main-navigation page-header__item">
 			  <ul role="menubar" class="navigation-list">
