--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 			<meta charset="utf-8">
-    <title>John Tsapos - Portfolio</title>
+    <title>Contact John Tsapos</title>
     <link rel="shortcut icon" href="./img/favicon.png"/>
      <!--To ensure your pages look consistent in all major browsers and that nothing will break, 
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
@@ -39,7 +39,7 @@
 		</header>
 		 
 		   <div class="contact">
-          <h1>Contact John Tsapos</h1>
+          <h1>Contact</h1>
               <p>
 			    Tel <a href="tel:+561234567">+56 1234567</a><br>
                 Skype <a href="skype:hello.JonT"> hello.JonT</a><br><br>
