Updated work.html page title

--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 			<meta charset="utf-8">
-    <title>Contact John Tsapos</title>
+    <title>John Tsapos Work Portfolio</title>
     <link rel="shortcut icon" href="./img/favicon.png"/>
     <!--To ensure your pages look consistent in all major browsers and that nothing will break, 
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
