Added Atom-Beautify to index.html

--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8">
     <title>John Tsapos Work Portfolio</title>
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <!--To ensure your pages look consistent in all major browsers and that nothing will break, 
+    <!--To ensure your pages look consistent in all major browsers and that nothing will break,
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -13,10 +13,9 @@
     </head>
 
  <body>
-
 		<!-- Header including the logo and the main navigation -->
 		<header class="page-header">
-			<a href="index.html">
+        <!--<a href="index.html"-->
 		   <!-- Add Logo here -->
 		   <img src="img/web_developer10.png" alt="logo" class="page-header__logo page-header__item">
 
@@ -35,7 +34,8 @@
 		            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
 		         </li>
 		      </ul>
-		   </nav>
+				</nav>
+
 		</header>
 
 		<!-- Main content -->
@@ -43,12 +43,12 @@
 		   <h1>Work</h1>
 		   <div class="grid">
 		      <!-- Grid items will live here -->
-		      <div class="grid__item">
+		         <div class="grid__item">
                 <h2>Mobile web app</h2>
                    <p>Within this project, I was responsible for the front end. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
                <a href="#">See project on GitHub</a>
               </div>
-              <div class="grid__item">
+						 <div class="grid__item">
               	<h2>Native MacOs Application</h2>
               	<p>Within this project, I was responsible for the frontend. It’s written in JavaFX.</p>
                <a href="#">See project on GitHub</a>
@@ -73,6 +73,7 @@
                 <p>I can help you in realizing Front-end and Back-end projects with the following Technologies: React.js, Javascript, Java, JavaFX, HTML and CSS.</p>
                 <a href="#">Contact Me</a>
               </div>
+						</div>
            </section>
 		<!-- Footer with links to social media profiles -->
 		<footer class="page-footer">
@@ -84,15 +85,14 @@
 		 </div>
 		</footer>
 
-</body>
+
        <script src="js/tota11y.min.js"></script>
+
 </body>
 
 
 
-		
 
 
-   
+
 </html>
-
