--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8">
     <title>John Tsapos - Home Page</title>
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <!--To ensure your pages look consistent in all major browsers and that nothing will break, 
+    <!--To ensure your pages look consistent in all major browsers and that nothing will break,
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
                 <!-- Header including the logo and the main navigation -->
           <header class="page-header">
-          	<a href="index.html">
+          	<!--<a href="index.html"-->
                 <!-- Add Logo here -->
 			  <img src="img/web_developer10.png" alt="logo" class="page-header__logo page-header__item">
 
@@ -39,14 +39,15 @@
 			</nav>
 		</header>
 
-		<body>
+		
 		    <div class="profile">
 		    	<!-- Add your Portrait image here -->
 			   <img src="img/john1.jpg" class="profile__portrait" alt="John Tsapos Portrait">
 			  <h1>Hi! I'm John</h1>
 			  <p> I am a US based <span class="p__highlight">web</span> developer.</p>
-			  <a href="#">Check out some of my code</a>	
+			  <a href="#">Check out some of my code</a>
            </div>
+
            <footer class="page-footer">
            	<p>Find Me On</p>
            	<div class="social-media">
@@ -55,14 +56,7 @@
 	           	<img src="img/linkedin_icon.svg" alt="LinkedIn">
 	        </div>
            </footer>
-             <script src="js/tota11y.min.js"></script>
-		</body>
+			           <script src="js/tota11y.min.js"></script>
 
 
-
-		
-
-
-   
 </html>
-
