--- a/about.html
+++ b/about.html
@@ -4,24 +4,24 @@
 			<meta charset="utf-8">
     <title>About John Tsapos</title>
     <link rel="shortcut icon" href="./img/favicon.png"/>
-     <!--To ensure your pages look consistent in all major browsers and that nothing will break, 
+     <!--To ensure your pages look consistent in all major browsers and that nothing will break,
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+	 </head>
 
 		<body>
-            <!-- Header including the logo and the main navigation -->
+           <!-- Header including the logo and the main navigation -->
         <header class="page-header">
-        	<a href="index.html">
+
                 <!-- Add Logo here -->
 			  <img src="img/web_developer10.png" alt="logo" class="page-header__logo page-header__item">
 
 			<nav class="main-navigation page-header__item">
 			  <ul role="menubar" class="navigation-list">
-				  	<li role="presentation">
+					 	<li role="presentation">
 				       <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
 				    </li>
 				    <li role="presentation">
@@ -34,11 +34,13 @@
 				       <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
 				    </li>
 			  </ul>
+
 			</nav>
 		</header>
 		<main>
+
 		<div class="skills">
-		    <h1 class="About">About John Tsapos</h1>
+		    <h1 class="About">About Me</h1>
 		      <table>
 		       	<thead>
 				  <tr>
@@ -47,7 +49,7 @@
 				    <th>Level of Expertise</th>
 				  </tr>
 				</thead>
-				<tbody>  
+				<tbody>
 				  <tr class="ht">
 				    <td>HTML</td>
 				    <td>1-2</td>
@@ -67,16 +69,16 @@
 				</table>
 				<ul>
 					<li>Detail- oriented Web Design & Development Engineer</li>
-					<li>Masters degree in Information Technology</li> 
+					<li>Masters degree in Information Technology</li>
 	                <li>1 to 3 years of work experience programming</li>
 					<li>Html/CSS - knowledge of responsive design</li>
 					<!--<li>Detail oriented with User Experience and interaction</li>-->
-					<!--<li>Exceptional time management and organizational skills</li>--> 
-					<!--<li>Able to shift gears quickly and wear multiple hats</li>-->	
+					<!--<li>Exceptional time management and organizational skills</li>-->
+					<!--<li>Able to shift gears quickly and wear multiple hats</li>-->
 				</ul>
 				<a href="files/cv.pdf" class="button" target="_blank">Download my CV</a>
-		        	 
-		        	 
+
+
 	        	     <!-- Beginning of svg for Animation -->
 	     <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="100%" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
