--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8">
     <title>Contact John Tsapos</title>
     <link rel="shortcut icon" href="./img/favicon.png"/>
-     <!--To ensure your pages look consistent in all major browsers and that nothing will break, 
+     <!--To ensure your pages look consistent in all major browsers and that nothing will break,
     	it’s best to start with a file that “resets” all these browser styles. normalize.min.css-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -12,11 +12,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
-
 	<body>
 			<!-- Header including the logo and the main navigation -->
         <header class="page-header">
-        	<a href="index.html">
+					        	<!--<a href="index.html"-->
                 <!-- Add Logo here -->
 			  <img src="img/web_developer10.png" alt="logo" class="page-header__logo page-header__item">
 
@@ -33,11 +32,12 @@
 		            </li>
 				    <li role="presentation">
 				       <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-				    </li>
+					 </li>
+					 
 			  </ul>
 			</nav>
 		</header>
-		 
+
 		   <div class="contact">
           <h1>Contact</h1>
               <p>
@@ -46,8 +46,8 @@
                 <a href="mailto:john@gmx.com">Contact me</a><br>
 			    <a href="mailto:john@gmx.com">john@gmx.com</a>
 			  </p>
-			
-             <form action="" method="post" id="contact-form">
+
+             <form action="/controllerpages(jsp,servlet,html,php)" method="post" id="contact-form">
 				  <label class="standard-label" for="contact-email">E-mail:* </label>
 				  <input type="email" id="contact-email" required>
 
@@ -60,13 +60,13 @@
 				  <button type="submit">Send message</button>
 			</form>
 			</div>
-					
+
             <!-- <div>
 		    	 Add your Portrait image here
 			   <img src="img/john1.jpg" alt="John Tsapos Portrait">
 			  <h2>Welcome Everyone!</h2>
 			  <p>My name is John Tsapos. I am a <span>web</span> developer from Greece.</p>
-			  <a href="#">Check out some of my code</a>	
+			  <a href="#">Check out some of my code</a>
            </div> -->
 
           <footer class="page-footer">
